[package]
name = "kpyay-server"
version = "0.1.0"
authors = ["Wojciech Smołka <sm.wojciech@gmail.com>"]
edition = "2018"

[dependencies]
actix-web ="2.*"
actix-rt = "1.0.0"
actix-http = "*"
actix-cors = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
redis = "*"
lazy_static = "*"
chrono = {version = "0.4", features = ["serde"] }
log = "*"
env_logger= "*"
